# RoomSched

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/common/bcrypt/: BCrypt.hpp
backend/database/: CMakeLists.txt  db_main.cpp
backend/database/db_sql/: create_database.sql  create_tables.sql
backend/database/include/: db_manager.hpp
backend/database/src/: db_manager.cpp
backend/postgresql/: CMakeLists.txt  database_main.sql  db_main.cpp
backend/postgresql/db/: create_tables.sql
backend/postgresql/include/: db_main.hpp  db_manager.hpp  db_users.hpp
backend/postgresql/src/: db_manager.cpp  db_users.cpp
backend/server/: CMakeLists.txt  test_server
backend/server/include/: auth.hpp  bookings.hpp  buildings.hpp  json_utils.hpp  server_auth.hpp  server_bookings.hpp  server_buildings.hpp  server_json_utils.hpp
backend/server/include/server/: app.hpp  router.hpp
backend/server/include/server/handlers/: auth_handler.hpp  booking_handler.hpp  buildings_handler.hpp  room_handler.hpp
backend/server/include/server/utils/: json_utils.hpp
backend/server/src/: app.cpp  auth.cpp  auth.h  bookings.cpp  buildings.cpp  buildings.h  json_utils.cpp  json_utils.h  main_server.cpp  router.cpp  server_auth.cpp  server_bookings.cpp  server_buildings.cpp  server_json_utils.cpp  server_main.cpp  test_server
backend/server/src/handlers/: auth_handler.cpp  booking_handler.cpp  building_handler.cpp  room_handler.cpp
backend/server/src/utils/: json_utils.cpp
frontend/client/: CmakeLists.txt
frontend/client/include/: api_client.hpp  auth_window.hpp  authwindow.hpp  client_main.hpp  register_window.hpp  registerwindow.hpp  room_list_window.hpp  roomlistwindow.h  roomlistwindow.hpp
(+36 files in other folders)
